fluent-syntax/test/fixtures_behavior/section_with_nl_in_the_middle.ftl
[[ This is
a broken section]]
//~ ERROR E0003, pos 10, args "]"
